[package]
name = "quick-oxibooks-sql"
version = "0.1.0"
edition = "2024"
authors = ["@exotik850"]
description = "A library to construct type-checked and safe SQL queries for Oxibooks."
license = "MIT"
keywords = ["quickbooks", "quickbooks-online", "api", "client", "rust"]
categories = ["api-clients", "web-programming"]

[dependencies]
quickbooks-types = "0.1.1"
quick-oxibooks-sql-macro = { path = "./quick-oxibooks-sql-macro" }
quick-oxibooks = { version = "0.1.2", optional = true }
ureq = { version = "3.0", optional = true }

[features]
default = ["api"]
api = ["dep:quick-oxibooks", "dep:ureq"]
